# geneva2s

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
bench/: bench_three_frameworks.py  perf_data.json  plot_speedup.py
data/: README.md  dpo_pairs_2025.json  smiles_bpe_v1.json
geneva2s/: __init__.py  adaptive.py  main.py  smiles_tokenizer.py  tokenizer.py  utils.py  viz.py
geneva2s/mlx/: __init__.py  generate.py  gpt.py  gpt_train.py  model.py  train.py
geneva2s/tf/: __init__.py  generate.py  model.py
geneva2s/torch/: __init__.py  convert_keras.py  generate.py  model.py  optimizers.py  train.py
models/: geneva2s.keras  geneva2s.pt  geneva2s_mlx_metal_grouped.safetensors
tests/: test_adaptive.py  test_convert.py  test_equivalence.py  test_generate.py  test_mlx_model.py  test_mlx_train.py  test_optimizers.py  test_tf_model.py  test_tokenizer.py  test_torch_model.py
