[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geneva2s"
version = "0.1.0"
description = "Autodidactic SMILES generator — PyTorch and TensorFlow variants. Based on the GEN architecture by Godin, Ertl, and van Deursen, with significant modifications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Guillaume Godin" },
]
dependencies = [
    "numpy",
    "rdkit",
    "h5py",
]

[project.optional-dependencies]
torch = ["torch==2.12"]
tf = ["tensorflow==2.15.1", "tensorflow-metal==1.1.0"]
mlx = ["mlx>=0.20"]
# mlx-metal adds the custom Metal LSTM kernels (GenevaBiLSTMMLXMetal* variants).
# mlx-addons is not on PyPI yet — install from
# https://github.com/guillaume-osmo/mlx-addons (or local checkout).
mlx-metal = ["mlx>=0.20", "mlx-addons"]
# discovery / erg adaptive modes need mlxmolkit (Metal Tanimoto + GPU cosine).
# mlxmolkit-rdkit is not on PyPI yet — install from
# https://github.com/guillaume-osmo/mlxmolkit (or local checkout).
discovery = ["mlx>=0.20", "mlxmolkit-rdkit>=0.5.0"]
tests = ["pytest>=7.0"]
all = [
    "torch==2.12",
    "tensorflow==2.15.1",
    "tensorflow-metal==1.1.0",
    "mlx>=0.20",
    "mlx-addons",
    "mlxmolkit-rdkit>=0.5.0",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["geneva2s*"]
exclude = ["tests*"]
